old/HTTPNetProber/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpnetprober-edge
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /httpnetprober-edge/get
    rewrite:
      uri: "/get"
    route:
    - destination:
        port:
          number: 8080
        host: httpnetprober-edge
